style.css
* {
    margin: 0;
    padding: 0;
}

div .icons>img {
    height: 20px;
}

.dash_image {
    height: 35px;
}

.header_icons {
    height: 30px;
}

.card_icons {
    height: 20px;
}

.avatar_icons {
    height: 25px;
}

.container {
    display: grid;
    height: 100vh;
    width: 100vw;
    grid-template-columns: 0.5fr 4fr;
    grid-template-rows: 0.5fr 3fr;
}

/* sidebar navigation */
.sidebar {
    background-color: green;
    display: grid;
    grid-row: 1 / 3;
    grid-template-rows: repeat(9, 1fr);
}

.title {
    display: flex;
    align-items: center;
    gap: 0.7rem;
    margin-left: 0.4rem;
    padding: 1rem;
}

.icons {
    display: flex;
    align-items: center;
    margin-left: 0.7rem;
    gap: 1.2rem;
}

.dashboard {
    margin-top: 1rem;
}

.nav_icons_one {
    margin-bottom: 1.5rem;
    display: grid;
    gap: 1.2rem;
    padding: 1rem;
}

.nav_icons_two {
    margin-top: 1rem;
    display: grid;
    gap: 1.2rem;
    padding: 1rem;
}

/* header */
.header {
    background-color: blue;
    display: grid;
    grid-template-rows: auto;
}

.top_section_header {
    display: flex;
    justify-content: space-between;
}

.search {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin-left: 3%;
}

.notification {
    display: flex;
    align-items: center;
    gap: 1.5rem;
    margin-right: 3%;
}

.bottom_section_header {
    display: flex;
    justify-content: space-between;
}

.avatar_greeting {
    display: flex;
    align-items: center;
    gap: 1rem;
    margin-left: 3%;
}

.header_buttons {
    display: flex;
    align-items: center;
    gap: 3rem;
    margin-right: 3%;
}

/* main-content left-side of project*/
.project_content {
    background-color: red;
    display: grid;
    grid-template-columns: 1fr 1fr 0.5fr;
    grid-template-rows: 0.2fr 4fr 0.4fr;
}

.left_projects {
    display: grid;
    grid-column: 1 / 3;
    grid-row: 1 / 3;
}

.project_cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

.cards {
    border: 2px solid black;
    height: 210px;
    width: 95%;
    position: relative;
}

.row_one,
.row_two {
    display: grid;
    gap: 2rem;
    place-content: center;
    margin-left: 4%;
    margin-bottom: 4rem;
}

.project_title {
    margin-top: 6%;
    margin-left: 4%;
    display: grid;
    grid-column: 1 / 2;
    grid-row: 1 / 2;
}

.project_texts {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 1.5rem;
}

.project_icons {
    display: flex;
    position: absolute;
    bottom: 0;
    right: 0;
    margin-bottom: 4%;
    margin-right: 5%;
    gap: 2.5rem;
}

/* main-content right-side of project */
.right_projects {
    display: grid;
    grid-row: 1 / 3;
    grid-template-rows: 0.2fr 2fr 2fr;
}

.announcement_title {
    margin-top: 7%;
}

.announcement_text {
    display: grid;
    border: 1pc solid yellow;
    height: 300px;
    width: 280px;
    margin-top: 11%;
    justify-content: center;
    padding: 1rem;
}

.trending_avatar {
    display: flex;
    flex-direction: flex-start;
    align-items: center;
}

